docs: added create specification to docs (#18)
