# src/swagger.json
@@ -11,6 +11,7 @@
     "paths": {
       "/categories": {
         "post": {
+          "tags": ["Categories"],
           "summary": "Create a category",
           "description": "Create a new category",
           "requestBody": {
@@ -44,6 +45,7 @@
           }
         },
         "get": {
+            "tags": ["Categories"],
             "summary": "List all categories",
             "description": "List all categories in database",
             "responses": {
@@ -73,6 +75,42 @@
               }
             }
           }
+      },
+      "/specifications": {
+        "post": {
+          "tags": ["Specifications"],
+          "summary": "Create a specification",
+          "description": "Create a new specification",
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string"
+                    },
+                    "description": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "name": "Specification name sample",
+                    "description": "Specification description sample"
+                  }
+                }
+              }
+            }
+          },
+          "responses": {
+            "201": {
+              "description": "Created"
+            },
+            "500": {
+              "description": "Specification already exists"
+            }
+          }
+        }
       }
     }
   }
